2001-12-13  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.

Tue Dec 11 21:31:57 2001  Owen Taylor  <otaylor@redhat.com>

	* leakdetect.c (leaks_find): Don't kill -CONT before
	detaching -- apparently this isn't necessary any
	more and prevents us from detaching.

Tue Dec 11 20:53:52 2001  Owen Taylor  <otaylor@redhat.com>

	* profile.c (profile_write): Sort child and inherited
	lists in the output for better 'diff -u' ability.

Tue Dec 11 20:40:37 2001  Owen Taylor  <otaylor@redhat.com>

	* process.c (process_command): Check for duplicate
	allocations of a same block, since realloc apparently
	calls malloc in some cases.

	* main.c server.c memintercept.c: Warning cleanups.

	* server.c process.c: Use g_object_new(), not g_type_create_instance.

	* process.c (process_command): Don't access block->size 
	after unrefing block.

Tue Dec 11 00:41:13  Kristian Rietveld  <kris@gtk.org>

	Port to gnome2 platform.

	* Makefile.am: remove intl from SUBDIRS, pkgdata_DATA:
	s/glade/glade2/, add memprof.glade2 build rule, add -export-dynamic
	as LDFLAG

	* acconfig.h: add GETTEXT_PACKAGE

	* autogen.sh: replace with 'gnome2 generic app autogen.sh'

	* configure.in: require autoconf 2.52, require intltool,
	require libglade-convert, use pkg-config instead of gnome-config,
	don't generate intl/Makefile

	* main.c: change to GObject where needed, ported glade_xml code,
	various other porting, get NLS support right and read
	memprof.glade2 instead of memprof.glade

	* memprof-strings.c: updated by glade

	* memprof.desktop: add Dutch Name and Comment

	* memprof.glade: remove invalid UTF-8

	* process.[ch], server.[ch]: port to new object system

	* tree.c: small porting action

2001-12-01  Soeren Sandmann  <sandmann@daimi.au.dk>

	* memintercept.c (memalign): Fix typo (name should be memalign(),
	not memealign())

Thu Jul 19 18:19:52 2001  Owen Taylor  <otaylor@redhat.com>
